# FP-Rayleigh

./: pyproject.toml
Evaluation/: Evaluation_RAY.tex
Preparation/: Preparation_RAY.tex  references.bib
resources/data/: calibration_B_I.csv  calibration_B_z.csv  glass_lead_400nm.csv  glass_lead_470nm.csv  glass_lead_508nm.csv  glass_lead_628nm.csv  glass_no_lead_400nm.csv  glass_no_lead_470nm.csv  glass_no_lead_508nm.csv  glass_no_lead_628nm.csv  malus_with_glass_I_phi.csv  malus_without_glass_I_phi.csv  modulation_Iss.csv
